<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_vertical"
    android:orientation="vertical"
    android:background="@drawable/background_grey_gradient"
    tools:context="com.example.chiilek.milkwatch.InformationDisplay">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"

        android:layout_height="406dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/milk_display"
            android:layout_width="91dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/milk_display"

            android:src="@drawable/bottle_half_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/information_display"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/milk_display"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/bacteria_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bacteria_level"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph_level"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bacteria_level"
                app:layout_constraintVertical_bias="0.02" />

        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="253dp"
        android:background="@color/colorSpaceGreyDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="top"
        android:orientation="vertical">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/switch_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bacteria_layout"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/setting_word_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                android:text="@string/settings"
                android:textColor="@color/colorSpaceGreyLight"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/setting_button_layout"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/setting_word_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.01"
                app:layout_constraintVertical_bias="0.7"

                android:contentDescription="@string/setting_icon"
                android:src="@drawable/setting_grey" />

            <TextView
                android:id="@+id/notification_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="@string/notification"
                android:textColor="@color/colorSpaceGreyLight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/notification_switch"
                app:layout_constraintHorizontal_bias="0.95"
                tools:layout_editor_absoluteY="14dp" />

            <Switch
                android:id="@+id/notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:layout_marginStart="10dp"
                android:thumbTint="@color/colorAccent"
                android:trackTint="@color/colorAccent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                tools:layout_editor_absoluteY="10dp" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/bacteria_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/switch_layout"
            app:layout_constraintBottom_toTopOf="@id/pH_layout"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bacteria_threshold"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bacteria_seek_bar"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/bacteria_seek_bar"
                android:layout_width="180dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/bacteria_threshold"
                android:progressDrawable="@drawable/scrubber_progress"/>

            <TextView
                android:id="@+id/bacteria_threshold"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/pH_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/result"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bacteria_layout"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ph_threshold"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pH_seek_bar"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SeekBar
                android:id="@+id/pH_seek_bar"
                android:layout_width="180dp"
                android:layout_height="25dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pH_threshold"
                android:progressDrawable="@drawable/scrubber_progress"/>

            <TextView
                android:id="@+id/pH_threshold"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.95"
                android:textColor="@color/colorAccent"
                android:textSize="14sp" />

        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/safe"
            android:textAlignment="center"
            android:textColor="@color/colorGreenSafe"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>
